# BCA_v1.1

./: .gitignore  BCA Tool.spec  BCA_EXPLANATION.md  BCA_Tool.spec  Makefile  README.md  build.bat  build.py  i.txt  prep.bat  prep.sh  pyproject.toml  requirements.txt
prep/: find_py.bat  find_py.sh  make_help.ps1  make_help.sh  prep.bat  prep.sh
src/: bca.py  excel.py  extra.py  frontend.py  gui.py  main.py  modifiable.py  plots.py  popup.py  tests.py  tomodfiy.py
src/frontend/: frontend.py  popup.py
src/libs/: excel.py  extra.py  logger.py
src/methods/: bv_method.py  elena_method.py  general_method.py  imv_method.py  old_bca.py  parkwind_method.py
src/modify/: bca_class.py  bca_entrypoint.py  plots.py  settings.py
